@@ -1,4 +1,5 @@
 0.09
+ - API change: Add 'issn' parameter to Series.
 
 0.08 2024-11-04T21:20:17+01:00
  - API change: Add 'cycles' parameter to Object.
